--- a/index.html
+++ b/index.html
@@ -2,38 +2,62 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Rock+Salt' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css'>
+     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
+    <link href="styles.css" rel="stylesheet">
     <title>My health club</title>
   </head>
   <body>
     <div class="container-fluid">
+
       <div class="header col-lg-12 col-md-6"> <!-- contain slideshow -->
+        <!-- <img src="images/health/ride.jpg" alt="foodride"  style="width:200px; height:150px;" > -->
+        <ul>
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#trainers">Trainers</a></li>
+            <li><a href="#recipes">Recipes</a></li>
+            <li><a href="#classes">Classes</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
 
       </div>
-      <div class="body1">
-        <div class="row icons"><!-- trainers' icons -->
+      <div class="row body1">
+        <div class="trainers col-lg-3" id="trainers"><!-- trainers' icons -->
+          <h5>Your Instructors</h5>
+          <img id="ivy"src="images/instructors/ivy.jpg" alt="ivy"style="width:100px; height:100px;">
+          <img id="charles"src="images/instructors/chaarles.jpeg" alt="charles"style="width:100px; height:100px;">
 
         </div>
-        <div class="row news"><!-- have various articles -->
-
-        </div>
-        <div class="row classes"> <!--different classes-->
+        <div class="news col-lg-9" id="news"><!-- have various articles -->
+          <h3><a href="https://www.ideafit.com/fitness-library/exercise-types-affect-the-brain-differently">Exercise Types Affect the Brain Differently</a></h3>
+          <img src="images/health/lifts.jpeg" alt="lifting" style="float:left; width:300px; height:400px;">
+          <p>Plenty of research has determined that regular exfloat:left; ercise benefits brain health. A recent large review got more specific and looked into how different types
+            of exercise affect the brain.</br> </br>In this review, published in British Journal of Sports Medicine (2017; doi: 10.1136/bjsports-2016-096587), the researchers assessed results from 39 studies. The scientists focused on five forms of physical activity—aerobic training, resistance exercise, “multicomponent training” (combination aerobic and resistance), tai chi and yoga—and studied how those modalities affected brain capacity, attention, executive function, memory and working memory. They also evaluated exercise session duration.</br> </br>To be included in the review, studies had to have included participants aged 50 and over who exercised in supervised training sessions for more than 4 weeks. There were no baseline requirements for cognitive ability; however, studies were excluded if the participants presented with a neurologic disorder or mental illness.
+            What did the researchers find?</br>  </br>
+            Aerobic exercise, resistance training and multicomponent training were all associated with gains in cognitive function when exercise intensity was moderate or vigorous, and gains were also seen with tai chi.</br></br> Optimal session duration was 45–60 minutes. “When exercise mode was examined as a moderator, all modes of exercise produced significant and positive effect estimates, except for yoga,” the authors said.
+            They concluded, “This meta-analysis showed that physical exercise interventions are effective at improving the cognitive function of older adults, regardless of baseline cognitive status.</br></br> Interventions of aerobic, resistance training, multicomponent training and tai chi were similarly effective. The findings suggest that an exercise program with components of both aerobic and resistance-type training, of at least moderate intensity and at least 45 minutes per session, on as many days of the week as possible, is beneficial to cognitive function in adults aged >50 years.”
+         </p>
 
         </div>
 
       </div>
-      <div class="body2">
-        <div class="row diet"><!-- have different juices and meals that are nutritious -->
+      <div class="row body2">
+        <div class="diet col-lg-3" id="recipes"><!-- have different juices and meals that are nutritious -->
 
         </div>
-        <div class="row foodie"><!-- food articles -->
-
+        <div class="foodie col-lg-6"><!-- food articles -->
+        <img src="images/icons/youtube.jpg" alt="youtube" style="width:30px; height:30px;">
         </div>
-        <div class="row booking"><!-- booking calender -->
+        <div class="booking col-lg-3"><!-- booking calender -->
 
         </div>
       </div>
-      <div class="footer">
-
+      <div class="footer col-lg-12">
+       <img src="images/icons/facebook.jpg" alt="facebook" style="width:30px; height:30px;">
+       <img src="images/icons/instagram.jpg" alt="Instagram" style="width:30px; height:30px;">
       </div>
     </div>
   </body>
