--- a/classes.html
+++ b/classes.html
@@ -2,9 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Rock+Salt' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css'>
+     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
+    <link href="styles.css" rel="stylesheet">
     <title>classes</title>
   </head>
   <body>
+    <div class="container-fluid">
+
+      <div class="header col-lg-12 col-md-6"> <!-- contain slideshow -->
+        <!-- <img src="images/health/ride.jpg" alt="foodride"  style="width:200px; height:150px;" > -->
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#trainers">Trainers</a></li>
+            <li><a href="#recipes">Recipes</a></li>
+            <li><a href="classes.html">Classes</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
+
+      </div>
+    </div>
+
+    <p>so what do you think?</p>
     <div class="classes col-lg-3" id="classes"> <!--different classes -->
        <div class="salsa">
 
@@ -16,6 +38,9 @@
 
        </div>
     </div>
+    <div class="booking col-lg-3"><!-- booking calender -->
 
+    </div>
+  </div>
   </body>
 </html>
