--- a/classes.html
+++ b/classes.html
@@ -7,7 +7,9 @@
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css'>
      <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
     <link href="styles.css" rel="stylesheet">
-    <title>classes</title>
+
+
+        <title>classes</title>
   </head>
   <body>
     <div class="container-fluid">
@@ -24,7 +26,7 @@
         </ul>
 
       </div>
-    </div>
+
     <div class="row">
      <div class=" classes col-lg-6" id="classes"> <!--different classes -->
        <table>
@@ -73,18 +75,68 @@
       <p>10 classes at ksh 3,500/=</p>
       <p>15 classes at ksh 4,500/=</p>
     </div>
-    <div class="total">
-      <h5>choose how many classes you want</h5>
-      <p>Salsa:
-        <input type="number" name="salsa" value=""v-model="Number"></p>
-      <p>Yoga:
-        <input type="number" name="yoga" value=""v-model="Number"></p>
-      <p>Aerobics:
-        <input type="number" name="aerobics" value=""v-model="Number"></p>
-    </div>
-  </div>
-    <div class="booking col-lg-3"><!-- booking calender -->
+    <!-- <div class="total"> -->
 
+  </div>
+    <div class="booking col-lg-12"><!-- booking calender -->
+      <!-- Begin MailChimp Signup Form -->
+ <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+ <style type="text/css">
+ 	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+ 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+ 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+ </style>
+ <div id="mc_embed_signup">
+ <form action="//github.us16.list-manage.com/subscribe/post?u=2bbeede329de2b7a5e6f42afc&amp;id=7e34e21fd9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+     <div id="mc_embed_signup_scroll">
+ 	<h2>Subscribe to our mailing list</h2>
+ <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+ <div class="mc-field-group">
+ 	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+ </label>
+ 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+ </div>
+ <div class="mc-field-group">
+ 	<label for="mce-FNAME">First Name </label>
+ 	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+ </div>
+ <div class="mc-field-group">
+ 	<label for="mce-LNAME">Last Name </label>
+ 	<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+ </div>
+ <div class="mc-field-group size1of2">
+ 	<label for="mce-MMERGE4">No of classes  <span class="asterisk">*</span>
+ </label>
+ 	<input type="number" name="MMERGE4" class="required" value="" id="mce-MMERGE4">
+ </div>
+ <div class="mc-field-group size1of2">
+ 	<label for="mce-MMERGE3">Phone Number </label>
+ 	<input type="text" name="MMERGE3" class="" value="" id="mce-MMERGE3">
+ </div>
+ 	<div id="mce-responses" class="clear">
+ 		<div class="response" id="mce-error-response" style="display:none"></div>
+ 		<div class="response" id="mce-success-response" style="display:none"></div>
+ 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2bbeede329de2b7a5e6f42afc_7e34e21fd9" tabindex="-1" value=""></div>
+     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+     </div>
+ </form>
+ </div>
+ <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[4]='MMERGE4';ftypes[4]='number';fnames[3]='MMERGE3';ftypes[3]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+ <!--End mc_embed_signup-->
+ <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+      <!-- <form v-on:submit.prevent="onSubmit" id="form"class="mc-form" action="index.html" method="post">
+         <p>Name:<input type="text" name="Name" value="" id="name"></p>
+         <p>Email:<input type="text" name="Email" value="" id="email"></p>
+         <p>Phone Number:<input type="text" name="" value="" id="tel"></p>
+         <h6>Maximum of 5 classes per categry</h6>
+         <p>Salsa:<input type="number" name="salsa" value=""v-model="Number"></p>
+         <p>Yoga:<input type="number" name="yoga" value=""v-model="Number"></p>
+         <p>Aerobics:<input type="number" name="aerobics" value=""v-model="Number"></p>
+         <input type="submit" name="Submit" value="submit">
+      </form> -->
     </div>
   </div>
   </body>
