--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a class="active" href="#home">Home</a></li>
             <li><a href="#news">News</a></li>
-            <li><a href="#trainers">Trainers</a></li>
+            <li><a href="trainers.html">Trainers</a></li>
             <li><a href="#recipes">Recipes</a></li>
             <li><a href="classes.html">Classes</a></li>
             <li><a href="#about">About</a></li>
@@ -25,15 +25,10 @@
 
       </div>
       <div class="row body1">
-        <div class="trainers col-lg-3" id="trainers"><!-- trainers' icons -->
-          <h5>Your Instructors</h5>
-          <img id="ivy"src="images/instructors/ivy.jpg" alt="ivy"style="width:100px; height:100px;">
-          <img id="charles"src="images/instructors/chaarles.jpeg" alt="charles"style="width:100px; height:100px;">
 
-        </div>
-        <div class="news col-lg-9" id="news"><!-- have various articles -->
+        <div class="news col-lg-12" id="news"><!-- have various articles -->
           <h3><a href="https://www.ideafit.com/fitness-library/exercise-types-affect-the-brain-differently">Exercise Types Affect the Brain Differently</a></h3>
-          <img src="images/health/workout.jpg" alt="workout" style="float:left; width:400px; height:250px;">
+          <img src="images/health/aerobic.jpg" alt="workout" style="float:left; width:500px; height:300px;">
           <p>Plenty of research has determined that regular exfloat:left; ercise benefits brain health. A recent large review got more specific and looked into how different types
             of exercise affect the brain.</br> </br>In this review, published in British Journal of Sports Medicine (2017; doi: 10.1136/bjsports-2016-096587), the researchers assessed results from 39 studies. The scientists focused on five forms of physical activity—aerobic training, resistance exercise, “multicomponent training” (combination aerobic and resistance), tai chi and yoga—and studied how those modalities affected brain capacity, attention, executive function, memory and working memory. They also evaluated exercise session duration.</br> </br>To be included in the review, studies had to have included participants aged 50 and over who exercised in supervised training sessions for more than 4 weeks. There were no baseline requirements for cognitive ability; however, studies were excluded if the participants presented with a neurologic disorder or mental illness.
             What did the researchers find?</br>  </br>
@@ -44,16 +39,19 @@
         </div>
 
       </div>
-      <div class="row body2">
+      <!-- <div class="row body2">
         <div class="diet col-lg-3" id="recipes"><!-- have different juices and meals that are nutritious -->
 
-        </div>
+        <!-- </div>
         <div class="foodie col-lg-6"><!-- food articles -->
-        <img src="images/icons/youtube.jpg" alt="youtube" style="width:30px; height:30px;">
+        <!-- <img src="images/icons/youtube.jpg" alt="youtube" style="width:30px; height:30px;">
         </div>
 
-      </div>
+      </div> -->
       <div class="footer col-lg-12">
+        <h6>subscribe here</h6>
+        <input type="text" name="" value="email" id="email">
+        <button type="submit" name="button">Subscribe</button>
        <img src="images/icons/facebook.jpg" alt="facebook" style="width:30px; height:30px;">
        <img src="images/icons/instagram.jpg" alt="Instagram" style="width:30px; height:30px;">
       </div>
